--- a/ter.html
+++ b/ter.html
@@ -42,7 +42,7 @@
                   </p> <p>
                     Link to Terms and Conditions of third-party service
                     providers used by the app
-                  </p> <ul><!----><!----><li><a href="https://firebase.google.com/terms/analytics" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li><li><a href="https://firebase.google.com/terms/crashlytics" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p>
+                  </p> <ul><!----><!----><li><a href="https://firebase.google.com/terms/analytics" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li><li><a href="https://firebase.google.com/terms/crashlytics" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><li><a href="https://onesignal.com/tos" target="_blank" rel="noopener noreferrer">One Signal</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p>
                   You should be aware that there are certain things that
                   Катерина Неганова will not take responsibility for. Certain
                   functions of the app will require the app to have an active
@@ -108,7 +108,7 @@
                   If you have any questions or suggestions about my
                   Terms and Conditions, do not hesitate to contact me
                   at molintola7@gmail.com.
-                </p> 
+                </p>
     </body>
     </html>
       
